# Topicos2_AC2_AF

./: .cproject  .gitignore  .mxproject  .project  CALCULO_TEMPO.md  DIAGRAMAS.md  DOCUMENTACAO_TECNICA_ABNT.md  ESTRUTURA_PROJETO.md  Projeto2.tex  QUICK_START_STM32.md  README.md  README_LATEX.md  README_ORIGINAL.md  STM32_SETUP_GUIDE.md  calculos.tex  camera_node.c  conveyor_node.h  explicando_precesso.md  main.c  safety_node.c  safety_node.h  script.txt  stm32_config.h  timing_config.h  tpicos_freertos.ioc
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: configuracoes_originais_do_stmcubeide.1762832108457.pdom  configuracoes_originais_do_stmcubeide.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 7.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Core/Inc/: FreeRTOSConfig.h  base_node.h  camera_node.h  gpio.h  piston_node.h  stm32_config.h  usart.h
Core/Src/: base_node.c  camera_node.c  conveyor_node.c  gpio.c  main.c  main_stm32.c  piston_node.c  safety_node.c  syscalls.c  usart.c
validacao/: CMakeLists.txt  Makefile  README.md
validacao/include/: FreeRTOS.h  FreeRTOSConfig.h  freertos_sim.h  queue.h  semphr.h  task.h  timers.h
validacao/src/: freertos_sim.c  validation_main.c
(+5 files in other folders)
